# server/src/server/endpoints/mod.rs
@@ -16,7 +16,10 @@ pub use realms_endpoints::{
 };
 
 mod client_endpoints;
-pub use client_endpoints::{jwks_well_known, login, roles_endpoint, version_endpoint, whoami};
+pub use client_endpoints::{
+    certificate_jwks_well_known, certify, jwks_well_known, login, roles_endpoint, version_endpoint,
+    whoami,
+};
 #[cfg(feature = "swagger-ui")]
 pub use client_endpoints::{openapi_yaml_endpoint, swagger_ui_endpoint};
 
